tests/baselines/reference/parserArrowFunctionExpression15(target=es6).errors.txt
fileJs.js(1,18): error TS8010: Type annotations can only be used in TypeScript files.


==== fileJs.js (1 errors) ====
    false ? (param): string => param : null // Not legal JS; "Unexpected token ':'" at last colon
                     ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
==== fileTs.ts (0 errors) ====
    false ? (param): string => param : null
    